[metadata]
name = subrun
version = file: VERSION
url = https://github.com/pyrustic/subrun
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = An elegant API to safely start and communicate with processes in Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    library
    subprocess
    process
    spawn
    commands
    pipeline
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    subrun = subrun.__main__:main
